--- a/front/package.json
+++ b/front/package.json
@@ -46,6 +46,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-plugin-markdown": "^2.2.0",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
