--- a/.github/workflows/github-actions-deploy-vite.yml
+++ b/.github/workflows/github-actions-deploy-vite.yml
@@ -26,6 +26,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +39,6 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
-          cache-dependency-path: "front/package-lock.json"
 
       - name: Go to the directory front
         run: cd front
