dev: again the cache dependancy path

--- a/.github/workflows/github-actions-deploy-vite.yml
+++ b/.github/workflows/github-actions-deploy-vite.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: "front/package-lock.json"
 
       - name: Go to the directory front
         run: cd front
