--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
-    "build:gh-pages": "vite build --outDir ../docs --base=/gestion-titres/ --emptyOutDir",
+    "build:gh-pages": "vite build --base=/gestion-titres/",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
