--- a/.github/workflows/github-actions-deploy-vite.yml
+++ b/.github/workflows/github-actions-deploy-vite.yml
@@ -2,7 +2,7 @@ name: Deploy vite application to Pages
 
 on:
   push:
-    branches: ["master"]
+    branches: ["gh-pages-deploy"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
