--- a/front/package.json
+++ b/front/package.json
@@ -52,5 +52,9 @@
     "vite-plugin-vue-devtools": "^7.3.6",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
+  },
+  "overrides": {
+    "sharp": "0.32.6",
+    "sharp-ico": "0.1.5"
   }
 }
