--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,12 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.4",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "pinia": "^2.1.7",
+    "vite-plugin-pwa": "^0.20.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "workbox-window": "^7.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
