--- a/back/package.json
+++ b/back/package.json
@@ -1,12 +1,25 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ewr src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/serve-index": "^1.9.4",
+    "express": "^4.20.0",
+    "morgan": "^1.10.0",
+    "serve-index": "^1.9.1"
+  },
+  "devDependencies": {
+    "@jlguenego/esbuild-watch-restart": "^1.0.5",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.5.4",
+    "typescript": "^5.6.2"
+  }
 }
